objects/Ambassador_Training__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Domain_ID__c</fullName>
        <description>Domain ID of Facilitator Completing The Training</description>
        <label>Ambassador</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Ambassador Training</relationshipLabel>
        <relationshipName>Ambassador_Training</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Course_Completion_Date__c</fullName>
        <description>Actual Date of Course Completion</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Completed Courses - Date Marked Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offering_Title__c</fullName>
        <description>Description of Learning Module</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Offering - Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Ambassador Training</label>
    <nameField>
        <displayFormat>Learning-{00000000}</displayFormat>
        <label>Ambassador Training Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ambassador Training</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>